UHF-11235: Prevent selects from wrapping when selecting options with long names

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -1,3 +1,6 @@
+// Max width for selects when not in mobile (From HDBT).
+$select-max-width: 420px;
+
 .component--event-list {
   @include component-side-padding;
 }
@@ -33,6 +36,10 @@
 
 .event-form__filter-section-container .hdbt-search__dropdown {
   max-width: none;
+
+  @include breakpoint($breakpoint-m) {
+    max-width: $select-max-width;
+  }
 }
 
 .event-list__see-all-button {
